add: 식물도감 메인페이지 완성

--- a/src/components/atoms/Footer/Footer.scss
+++ b/src/components/atoms/Footer/Footer.scss
@@ -4,6 +4,7 @@ footer {
     width: 100%;
     border-top: 1px solid #e4e6ef;
     background-color: #ffffff;
+    z-index: 999;
     ul {
         height: 5.6rem;
         display: flex;
