--- a/src/components/pages/MyPage/MyPage.scss
+++ b/src/components/pages/MyPage/MyPage.scss
@@ -1,7 +1,7 @@
 .my_page {
-    display: flex;
-    flex-direction: column;
-    min-height: calc(100vh - 5.7rem);
+    // display: flex;
+    // flex-direction: column;
+    // min-height: calc(100vh - 5.7rem);
     background-color: #f8f8fa;
 
     .my_container {
@@ -9,7 +9,7 @@
         display: flex;
         flex-direction: column;
         flex: 1 auto;
-        margin-bottom: 5.8rem;
+        // margin-bottom: 5.8rem;
 
         .my_info_box {
             padding-bottom: 4rem;
