--- a/src/components/pages/MyPage/MyPage.scss
+++ b/src/components/pages/MyPage/MyPage.scss
@@ -211,6 +211,7 @@
     position: relative;
     padding: 2.2rem 0;
     border-bottom: 1px solid #f7f8f7;
+    background-color: #fff;
     .back_btn {
         position: absolute;
         left: 2rem;
