--- a/src/components/pages/HomePage/HomePage.scss
+++ b/src/components/pages/HomePage/HomePage.scss
@@ -9,6 +9,11 @@ main {
     min-height: calc(100vh - 11.5rem);
     margin-bottom: 5.7rem;
 
+    &.empty_footer {
+        min-height: 100vh;
+        margin-bottom: 0;
+    }
+
     .info_wrap {
         position: relative;
 
