--- a/src/components/pages/DiaryPage/DiaryPage.scss
+++ b/src/components/pages/DiaryPage/DiaryPage.scss
@@ -96,4 +96,61 @@
             }
         }
     }
+
+    .diary_slide {
+        border-bottom: 1px solid #f7f8f7;
+        img {
+            width: 100%;
+            display: block;
+        }
+        .swiper-wrapper {
+            padding-bottom: 3.4rem;
+        }
+        .swiper-horizontal > .swiper-pagination-bullets,
+        .swiper-pagination-bullets.swiper-pagination-horizontal {
+            bottom: 1.3rem;
+        }
+        .swiper-pagination-bullet {
+            background-color: #c4c4c4;
+            width: 0.6rem;
+            height: 0.6rem;
+        }
+        .swiper-pagination-bullet-active {
+            background-color: #1fb0ad;
+        }
+    }
+
+    .diary_txt {
+        padding-bottom: 2.8rem;
+        strong {
+            padding: 1.2rem 0;
+            display: block;
+            font-size: 1.8rem;
+        }
+        .mySwiper {
+            .swiper-slide {
+                width: auto !important;
+            }
+            span {
+                padding: 0.3rem 1rem;
+                display: inline-block;
+                background-color: #f8f8fa;
+                border-radius: 0.6rem;
+                color: #979797;
+                font-size: 1.2rem;
+            }
+        }
+
+        pre {
+            padding-top: 2.8rem;
+            font-family: Pretendard;
+            line-height: 1.8rem;
+            color: #979797;
+        }
+        p {
+            padding-top: 2.8rem;
+            font-size: 1.2rem;
+            color: #979797;
+        }
+    }
 }
