--- a/src/components/pages/LoginPage/LoginPage.scss
+++ b/src/components/pages/LoginPage/LoginPage.scss
@@ -55,6 +55,8 @@
         }
 
         .submit_btn {
+            display: inline-block;
+            text-align: center;
             margin-top: 2.8rem;
             width: 100%;
             height: 5.2rem;
@@ -64,6 +66,21 @@
             background-color: rgba($color: #ffffff, $alpha: 0.5);
             filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.06));
             font-size: 1.4rem;
+        }
+
+        .join_btn {
+            margin-top: 0.6rem;
+            display: flex;
+            justify-content: end;
+
+            span {
+                display: inline-block;
+                padding: 0 2rem 0 1.8rem;
+                color: #4d4d4d;
+                font-size: 1.2rem;
+                background: url("../../../assets/images/icons/icon_user.png")
+                    no-repeat left center / 1.4rem;
+            }
         }
 
         .oauth_box {
