--- a/src/components/pages/MyPage/MyPage.scss
+++ b/src/components/pages/MyPage/MyPage.scss
@@ -228,6 +228,39 @@
         width: 100%;
         font-size: 1.6rem;
     }
+
+    .more_wrap {
+        position: relative;
+        .more_btn {
+            position: absolute;
+            right: 2rem;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 2.4rem;
+            height: 1.8rem;
+            background: url("../../../assets/images/icons/icon_more.png")
+                no-repeat center / contain;
+        }
+        ul {
+            z-index: 99;
+            position: absolute;
+            width: 8rem;
+            right: 2.2rem;
+            top: 2rem;
+            box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.15);
+            background-color: #ffffff;
+            border-radius: 0.4rem;
+            li {
+                padding: 1rem 1.6rem;
+                font-weight: 600;
+                font-size: 1.3rem;
+            }
+            li ~ li {
+                border-top: 1px solid #f7f8f7;
+                color: #c17369;
+            }
+        }
+    }
 }
 
 .my_info_page {
