add: 다이어리 토글 최적화

--- a/src/components/pages/MyPage/MyPage.scss
+++ b/src/components/pages/MyPage/MyPage.scss
@@ -242,6 +242,7 @@
                 no-repeat center / contain;
         }
         ul {
+            display: none;
             z-index: 99;
             position: absolute;
             width: 8rem;
@@ -259,6 +260,9 @@
                 border-top: 1px solid #f7f8f7;
                 color: #c17369;
             }
+        }
+        ul.on {
+            display: block;
         }
     }
 }
