--- a/src/components/pages/MyPage/MyPage.scss
+++ b/src/components/pages/MyPage/MyPage.scss
@@ -229,6 +229,17 @@
         font-size: 1.6rem;
     }
 
+    .close_btn {
+        position: absolute;
+        right: 2rem;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 2.4rem;
+        height: 2.4rem;
+        background: url("../../../assets/images/icons/icon_close.png") no-repeat
+            center / contain;
+    }
+
     .more_wrap {
         position: relative;
         .more_btn {
