add: 내식물 상세 페이지 작성

--- a/src/components/pages/DictPage/DictPage.scss
+++ b/src/components/pages/DictPage/DictPage.scss
@@ -163,7 +163,7 @@
             border-radius: 50%;
             overflow: hidden;
         }
-        span {
+        .main_en_name {
             display: block;
             padding-top: 2rem;
             color: #b8b8b8;
