[feat]: 공통 토스트 팝업 작성
- 토스트 팝업 컴포넌트 작성
- 토스트 팝업 css 적용
- 메시지 관리 atom, hooks 정의
- 토스트 팝업 형태로 메시지 생성시 애니메이트 출현 및 n초뒤 삭제 기능 추가

--- a/src/components/atoms/Toast/Toast.scss
+++ b/src/components/atoms/Toast/Toast.scss
@@ -1,3 +1,22 @@
 .toast{
   position: fixed;
+  left:2rem;
+  top: 2rem;
+  padding: 1.4rem 1.6rem;
+  width:calc(100% - 4rem);
+  border-radius: 1.4rem;
+  background: rgba(245, 245, 245, 0.8);
+  backdrop-filter: blur(6px);
+  transform: translateY(calc(-100% - 2rem));
+  transition: transform 0.3s;
+  z-index:999;
+
+  &.open{
+    transform: translateY(0);
+  }
+
+  strong {
+    display: block;
+    padding-bottom: .6rem;
+  }
 }
